[package]
name = "gvmkit"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2021"
license = "GPL-3.0"

[dependencies]
actix-rt = "2.8.0"
anyhow = "1.0"
awc = "3.1.0"
bollard = "0.14.0"
bytes = "1.4.0"
crc = "1.8.1"
futures = "0.3"
futures-util = "0.3"
indicatif = "0.17.3"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.10.0"
hex = "0.4"
regex = "1.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10.6"
structopt = "0.3"
tar = "0.4"
tokio = { version = "1.25.0", features = ["macros", "fs"] }
trust-dns-resolver = { version = "0.22.0" }

