[package]
name = "gvmkit-build"
version = "0.3.12"
description = "Tool used to build gvmi images used by Golem Network. Companion app to Golem Registry"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/golemfactory/gvmkit-build-rs"

[dependencies]
anyhow = "1.0"
# awc = "3.1.0"
bollard = "0.14.0"
bytes = "1.4.0"
crc = "3.0.1"
dotenv = "0.15.0"
futures = "0.3"
futures-util = "0.3"
indicatif = "0.17.3"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.10.0"
hex = "0.4"
regex = "1.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10.6"
sha2 = "0.10.6"
clap = { version = "4.2.7", features = ["derive"] }
tar = "0.4"
tokio = { version = "1.25.0", features = ["macros", "fs"] }
tokio-util = "0.7.8"
trust-dns-resolver = { version = "0.22.0" }
hyper = "0.14.0"
keyring = "2.0"
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }
humansize = "2.1.3"
humantime = "2.1.0"
rand = "0.8.4"
reqwest = {version="0.11.17", default_features = false, features=["rustls-tls", "multipart", "stream", "json"]}
rpassword = "7.2"
once_cell = "1.17"

[dev-dependencies]
fastrand = "1.9.0"

[package.metadata.maturin]
name = "gvmkit_build"

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
